--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
-Package: hdmvtest3
+Package: hdmv
 Type: Package
 Title: What the package does (short line)
 Version: 1.0
-Date: 2022-03-08
+Date: 2022-04-09
 Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
